<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".detalleProducto">

    <!-- ENCABEZADO -->
    <View
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#022D36"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- BOTÓN MENÚ -->
    <ImageButton
        android:id="@+id/imgBtnMenu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/abrir_menu"
        android:src="@android:drawable/ic_menu_sort_by_size"
        android:importantForAutofill="no"
        app:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TÍTULO -->
    <TextView
        android:id="@+id/txtnewProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nuevo_producto"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/imgBtnMenu"
        app:layout_constraintTop_toTopOf="@id/imgBtnMenu"
        app:layout_constraintBottom_toBottomOf="@id/imgBtnMenu" />

    <!-- TARJETA -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mCVProducto"
        android:layout_width="0dp"
        android:layout_height="580dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:strokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <!-- NOMBRE -->

            <TextView
                android:id="@+id/lblNombreProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_del_producto"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtNombreProducto"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:hint="@string/ej_teclado_mecanico"
                android:inputType="textCapSentences"
                android:importantForAutofill="yes"
                android:autofillHints="name"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblNombreProducto" />

            <!-- CÓDIGO -->

            <TextView
                android:id="@+id/lblCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/codigo"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtNombreProducto" />

            <EditText
                android:id="@+id/edtCodigo"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:hint="@string/ej_100000f"
                android:inputType="textCapCharacters"
                android:importantForAutofill="no"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblCodigo" />

            <!-- CATEGORÍA -->

            <TextView
                android:id="@+id/lblCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/categoria"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtCodigo" />

            <AutoCompleteTextView
                android:id="@+id/edtCategoria"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:hint="@string/seleccione_la_categoria"
                android:inputType="none"
                android:importantForAutofill="no"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblCategoria" />

            <!-- PRECIO -->

            <TextView
                android:id="@+id/lblPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/precio"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtCategoria" />

            <EditText
                android:id="@+id/edtPrecio"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:hint="@string/cero_punto_cero_cero"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblPrecio" />

            <!-- CANTIDAD -->

            <TextView
                android:id="@+id/lblCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cantidad"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPrecio" />

            <EditText
                android:id="@+id/edtCantidad"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:hint="@string/cero"
                android:inputType="number"
                android:importantForAutofill="no"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblCantidad" />

            <!-- BOTÓN GUARDAR -->

            <Button
                android:id="@+id/btnGuardarProducto"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="#022D36"
                android:text="@string/guardar_producto"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>